hphp/hack/test/typecheck/require_extends_primitive.php.exp
File "require_extends_primitive.php", line 8, characters 19-21:
Was expecting a class or interface (Typing[4026])
